google map shadows

--- a/treasuremit/src/styles/NavBar.module.css
+++ b/treasuremit/src/styles/NavBar.module.css
@@ -2,12 +2,12 @@
     background-color: var(--lblue);
     display: flex;
     padding-top:10px;
-    padding-bottom:2px;
     padding-left:20px;
     padding-right:30px;
     justify-content: space-between;
     font-family: 'Solitreo', cursive;
     align-items: center;
+    height:4vh;
 }
 
 .name{
