--- a/treasuremit/src/styles/globals.css
+++ b/treasuremit/src/styles/globals.css
@@ -109,5 +109,11 @@ body{
 
 .map-container {
   width: 100%;
-  height: 100vh;
+  height: 94.9vh;
+}
+
+.map-wrapper{
+  display: flex;
+  flex-direction: column;
+  height:100vh;
 }
