--- a/treasuremit/src/styles/globals.css
+++ b/treasuremit/src/styles/globals.css
@@ -61,7 +61,7 @@
 }
 
 .Login-backimg{
-  height:100vh;
+  height:94.9vh;
   width:100%;
 
 }
@@ -116,4 +116,14 @@ body{
   display: flex;
   flex-direction: column;
   height:100vh;
+}
+
+.infoTitle, .infoClue{
+  padding:0;
+  margin:0;
+  text-align: center;
+}
+
+.infoClue{
+  margin:5px;
 }
