--- a/treasuremit/src/styles/TreasureCard.module.css
+++ b/treasuremit/src/styles/TreasureCard.module.css
@@ -1,15 +1,20 @@
 .container{
-    height:400px;
+    height:243px;
+    width:200px;
     margin: 3em 10vh;
     background-color: white;
     flex: 0 0 350px;
     border-radius: 15px;
+    box-shadow: 0 0 1em rgb(184, 184, 184);
+    background-size: contain;
 
 
 }
 
 .textContainer{
     margin: 15px 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .title{
@@ -18,4 +23,13 @@
     text-align: center;
     text-decoration: underline;
     margin-bottom: 20px;
+}
+
+
+.content{
+    margin-left: 15px;
+    margin-bottom:10px;
+    width:275px;
+    text-align: center;
+    overflow-wrap: break-word;
 }
